--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.1",
-    "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "reselect": "^4.1.8",
     "web-vitals": "^2.1.4"
@@ -18,7 +17,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "coverage": "nyc --reporter=lcov --reporter=text jest",
+    "coverage": "jest --coverage",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -40,19 +39,24 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.22.9",
+    "@babel/preset-env": "^7.22.9",
+    "@babel/preset-react": "^7.22.5",
     "@jest/globals": "^29.6.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^14.0.0",
     "@types/testing-library__jest-dom": "^5.14.9",
+    "babel-jest": "^29.6.1",
     "eslint": "^8.44.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jest": "^27.2.3",
     "eslint-plugin-n": "^16.0.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "istanbul-lib-instrument": "^6.0.0",
     "jest": "^27.5.1",
-    "nyc": "^15.1.0"
+    "jest-environment-jsdom": "^29.6.1",
+    "react-scripts": "^5.0.1"
   }
 }
